Fixed footer covering content

--- a/WebContent/resources/css/facebroke.css
+++ b/WebContent/resources/css/facebroke.css
@@ -1,5 +1,11 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
 	padding-top: 60px;
+	margin-bottom: 60px;
 }
 
 .navbar {
@@ -35,7 +41,6 @@ body {
 
 .nav > li > a:focus, 
 .nav > li > a:hover, 
-.nav .open > a, 
 .nav .open > a:focus, 
 .nav .open > a:hover {
 	color: #FFF;
@@ -51,4 +56,17 @@ body {
 	position: fixed;
 	top: 50px;
 	z-index: 7000;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  padding-top: 20px;
+  padding-left: 20px;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+}
+
+.reg-block {
+	padding-top: 25px;
 }
